...
                android:layout_height="match_parent" />


        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabLoadMoreData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@mipmap/load_more" />
    </android.support.design.widget.CoordinatorLayout>
...
